testsuite/tests/dependent/should_fail/T15591c.stderr

T15591c.hs:9:3: error:
    • These kind and type variables: c a
      are out of dependency order. Perhaps try this ordering:
        a (b :: Proxy a) (c :: Proxy b)
      NB: Implicitly declared variables come before others.
    • In the associated type family declaration for ‘T5’
